--- a/html-and-css-prototype/CSS/stylesheet.css
+++ b/html-and-css-prototype/CSS/stylesheet.css
@@ -21,6 +21,7 @@ h1 {
 }
 
 .container {
+
 	margin: 2em auto;
 	max-width: 630px;
 	text-align: center;
@@ -42,3 +43,75 @@ h1 {
 */
 
 /* Your CSS code goes here */
+.box{
+  margin:  auto;
+	width: 30%;
+	text-align: center;
+	padding: 15px;
+}
+.box-1{
+	font-size: 15px;
+	color:white;
+	border-radius: 3px;
+	background: rgb(50, 50, 53);
+	padding: 10px;
+}
+
+.box-2{
+	display: flex;
+	justify-content: flex-start;
+	border: 1px solid lightgray;
+  height: 20px;
+}
+.inner-box{
+	width: 70%;
+	background-color:tomato
+}
+
+.box-border{
+	font-size: 13px;
+	padding: 10px;
+	border: 1px solid lightgray;
+}
+.orange-text{
+	color: orangered;
+}
+.in-box{
+	font-family: "Calibri";
+  color:#A9A9A9;
+	text-align: justify;
+	padding: 15px
+}
+
+input[type=text], input[type=submit]{
+  width: 45%;
+  padding: 15px;
+  border: 1px solid lightgray;
+  border-radius: 5px;
+}
+.input-but{
+	display: flex;
+	justify-content: space-evenly;
+}
+#submit-but{
+	color:white;
+	background: #5cb85c;
+}
+
+.link {
+  text-align: justify;
+  padding: 12px;
+	color: dodgerblue;
+}
+.bottom-button{
+	
+	display: flex;
+	justify-content: space-between;
+}
+.bottom-button input{
+	
+	margin: 5px;
+	padding: 10px;
+}
+
+
